# DjangoRest_HW

./: .env.sample  Dockerfile  celerybeat-schedule.dir  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lessons_course.py  0003_course_owner_lessons_owner.py  0004_subscription.py  0005_course_price.py  0006_course_last_update.py  0007_alter_lessons_options.py
users/: admin.py  apps.py  filters.py  managers.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: payments_data.json
users/migrations/: 0001_initial.py  0002_alter_user_options_user_avatar_user_city_and_more.py  0003_payment.py  0004_remove_user_username.py  0005_alter_user_managers_alter_payment_paid_lessons.py  0006_payment_payment_link_payment_stripe_session_id.py
